add privileged opt-in and host pid namespace
