# core/server/api_container/server/startosis_engine/kurtosis_instruction/add_service/add_service.go
@@ -7,11 +7,13 @@ import (
 
 	"github.com/kurtosis-tech/kurtosis/container-engine-lib/lib/backend_interface/objects/image_download_mode"
 	"github.com/kurtosis-tech/kurtosis/container-engine-lib/lib/backend_interface/objects/service"
+	"github.com/kurtosis-tech/kurtosis/core/launcher/args"
 	"github.com/kurtosis-tech/kurtosis/core/server/api_container/server/service_network"
 	"github.com/kurtosis-tech/kurtosis/core/server/api_container/server/startosis_engine/dependency_graph"
 	"github.com/kurtosis-tech/kurtosis/core/server/api_container/server/startosis_engine/enclave_plan_persistence"
 	"github.com/kurtosis-tech/kurtosis/core/server/api_container/server/startosis_engine/enclave_structure"
 	"github.com/kurtosis-tech/kurtosis/core/server/api_container/server/startosis_engine/interpretation_time_value_store"
+	"github.com/kurtosis-tech/kurtosis/core/server/api_container/server/startosis_engine/kurtosis_instruction/privileged_mode"
 	"github.com/kurtosis-tech/kurtosis/core/server/api_container/server/startosis_engine/kurtosis_instruction/shared_helpers"
 	"github.com/kurtosis-tech/kurtosis/core/server/api_container/server/startosis_engine/kurtosis_starlark_framework"
 	"github.com/kurtosis-tech/kurtosis/core/server/api_container/server/startosis_engine/kurtosis_starlark_framework/builtin_argument"
@@ -48,7 +50,9 @@ func NewAddService(
 	packageContentProvider startosis_packages.PackageContentProvider,
 	packageReplaceOptions map[string]string,
 	interpretationTimeValueStore *interpretation_time_value_store.InterpretationTimeValueStore,
-	imageDownloadMode image_download_mode.ImageDownloadMode) *kurtosis_plan_instruction.KurtosisPlanInstruction {
+	imageDownloadMode image_download_mode.ImageDownloadMode,
+	allowPrivilegedMode bool,
+	kurtosisBackendType args.KurtosisBackendType) *kurtosis_plan_instruction.KurtosisPlanInstruction {
 	return &kurtosis_plan_instruction.KurtosisPlanInstruction{
 		KurtosisBaseBuiltin: &kurtosis_starlark_framework.KurtosisBaseBuiltin{
 			Name: AddServiceBuiltinName,
@@ -103,6 +107,8 @@ func NewAddService(
 				imageVal:                     nil, // populated at interpretation time
 				imageDownloadMode:            imageDownloadMode,
 				forceUpdate:                  defaultForceUpdate, // populated at interpretation time
+				allowPrivilegedMode:          allowPrivilegedMode,
+				kurtosisBackendType:          kurtosisBackendType,
 			}
 		},
 
@@ -133,8 +139,10 @@ type AddServiceCapabilities struct {
 	returnValue *kurtosis_types.Service
 	description string
 
-	imageDownloadMode image_download_mode.ImageDownloadMode
-	forceUpdate       bool
+	imageDownloadMode   image_download_mode.ImageDownloadMode
+	forceUpdate         bool
+	allowPrivilegedMode bool
+	kurtosisBackendType args.KurtosisBackendType
 }
 
 func (builtin *AddServiceCapabilities) Interpret(locatorOfModuleInWhichThisBuiltInIsBeingCalled string, arguments *builtin_argument.ArgumentValuesSet) (starlark.Value, *startosis_errors.InterpretationError) {
@@ -165,6 +173,9 @@ func (builtin *AddServiceCapabilities) Interpret(locatorOfModuleInWhichThisBuilt
 		builtin.imageDownloadMode,
 	)
 	if interpretationErr != nil {
+		return nil, interpretationErr
+	}
+	if interpretationErr := privileged_mode.ValidateServiceConfig(apiServiceConfig, builtin.allowPrivilegedMode, builtin.kurtosisBackendType); interpretationErr != nil {
 		return nil, interpretationErr
 	}
 
