# core/server/api_container/server/startosis_engine/startosis_interpreter.go
@@ -115,7 +115,12 @@ func (interpreter *StartosisInterpreter) InterpretAndOptimizePlan(
 	nonBlockingMode bool,
 	currentEnclavePlan *enclave_plan_persistence.EnclavePlan,
 	imageDownloadMode image_download_mode.ImageDownloadMode,
+	allowPrivilegedModeOpt ...bool,
 ) (string, *instructions_plan.InstructionsPlan, *kurtosis_core_rpc_api_bindings.StarlarkInterpretationError) {
+	allowPrivilegedMode := false
+	if len(allowPrivilegedModeOpt) > 0 {
+		allowPrivilegedMode = allowPrivilegedModeOpt[0]
+	}
 
 	if interpretationErr := interpreter.packageContentProvider.CloneReplacedPackagesIfNeeded(packageReplaceOptions); interpretationErr != nil {
 		return "", nil, interpretationErr.ToAPIType()
@@ -124,7 +129,7 @@ func (interpreter *StartosisInterpreter) InterpretAndOptimizePlan(
 	// run interpretation with no mask at all to generate the list of instructions as if the enclave was empty
 	enclaveComponents := enclave_structure.NewEnclaveComponents()
 	emptyPlanInstructionsMask := resolver.NewInstructionsPlanMask(0)
-	naiveInstructionsPlanSerializedScriptOutput, naiveInstructionsPlan, interpretationErrorApi := interpreter.Interpret(ctx, packageId, mainFunctionName, packageReplaceOptions, relativePathtoMainFile, serializedStarlark, serializedJsonParams, nonBlockingMode, enclaveComponents, emptyPlanInstructionsMask, imageDownloadMode, instructions_plan.NewInstructionsPlan())
+	naiveInstructionsPlanSerializedScriptOutput, naiveInstructionsPlan, interpretationErrorApi := interpreter.Interpret(ctx, packageId, mainFunctionName, packageReplaceOptions, relativePathtoMainFile, serializedStarlark, serializedJsonParams, nonBlockingMode, enclaveComponents, emptyPlanInstructionsMask, imageDownloadMode, instructions_plan.NewInstructionsPlan(), allowPrivilegedMode)
 	if interpretationErrorApi != nil {
 		return startosis_constants.NoOutputObject, nil, interpretationErrorApi
 	}
@@ -194,7 +199,7 @@ func (interpreter *StartosisInterpreter) InterpretAndOptimizePlan(
 		}
 
 		// Now that we have a potential plan mask, try running interpretation again using this plan mask and a new instructions plan
-		attemptSerializedScriptOutput, attemptInstructionsPlan, interpretationErrorApi := interpreter.Interpret(ctx, packageId, mainFunctionName, packageReplaceOptions, relativePathtoMainFile, serializedStarlark, serializedJsonParams, nonBlockingMode, enclaveComponents, potentialMask, imageDownloadMode, instructions_plan.NewInstructionsPlan())
+		attemptSerializedScriptOutput, attemptInstructionsPlan, interpretationErrorApi := interpreter.Interpret(ctx, packageId, mainFunctionName, packageReplaceOptions, relativePathtoMainFile, serializedStarlark, serializedJsonParams, nonBlockingMode, enclaveComponents, potentialMask, imageDownloadMode, instructions_plan.NewInstructionsPlan(), allowPrivilegedMode)
 		if interpretationErrorApi != nil {
 			// Note: there's no real reason why this interpretation would fail with an error, given that the package
 			// has been interpreted once already (right above). But to be on the safe side, check the error
@@ -247,9 +252,14 @@ func (interpreter *StartosisInterpreter) Interpret(
 	instructionsPlanMask *resolver.InstructionsPlanMask,
 	imageDownloadMode image_download_mode.ImageDownloadMode,
 	instructionsPlan *instructions_plan.InstructionsPlan,
+	allowPrivilegedModeOpt ...bool,
 ) (string, *instructions_plan.InstructionsPlan, *kurtosis_core_rpc_api_bindings.StarlarkInterpretationError) {
 	interpreter.mutex.Lock()
 	defer interpreter.mutex.Unlock()
+	allowPrivilegedMode := false
+	if len(allowPrivilegedModeOpt) > 0 {
+		allowPrivilegedMode = allowPrivilegedModeOpt[0]
+	}
 	newInstructionsPlan := instructionsPlan
 	logrus.Debugf("Interpreting package '%v' with contents '%v' and params '%v'", packageId, serializedStarlark, serializedJsonParams)
 	moduleLocator := packageId
@@ -295,7 +305,7 @@ func (interpreter *StartosisInterpreter) Interpret(
 	if mainFuncParamsNum >= minimumParamsRequiredForPlan {
 		firstParamName, _ := mainFunction.Param(planParamIndex)
 		if firstParamName == planParamName {
-			kurtosisPlanInstructions := KurtosisPlanInstructions(packageId, interpreter.serviceNetwork, interpreter.recipeExecutor, interpreter.packageContentProvider, packageReplaceOptions, nonBlockingMode, interpreter.interpretationTimeValueStore, imageDownloadMode, interpreter.kurtosisBackendType)
+			kurtosisPlanInstructions := KurtosisPlanInstructions(packageId, interpreter.serviceNetwork, interpreter.recipeExecutor, interpreter.packageContentProvider, packageReplaceOptions, nonBlockingMode, interpreter.interpretationTimeValueStore, imageDownloadMode, interpreter.kurtosisBackendType, allowPrivilegedMode)
 			planModule := plan_module.PlanModule(newInstructionsPlan, enclaveComponents, interpreter.starlarkValueSerde, instructionsPlanMask, kurtosisPlanInstructions)
 			argsTuple = append(argsTuple, planModule)
 		}
