# enclave-manager/server/server.go
@@ -809,9 +809,10 @@ func (c *WebServer) GetStarlarkScriptPlanYaml(
 
 	request := &connect.Request[kurtosis_core_rpc_api_bindings.StarlarkScriptPlanYamlArgs]{
 		Msg: &kurtosis_core_rpc_api_bindings.StarlarkScriptPlanYamlArgs{
-			SerializedScript: req.Msg.StarlarkScriptPlanYamlArgs.SerializedScript,
-			SerializedParams: req.Msg.StarlarkScriptPlanYamlArgs.SerializedParams,
-			MainFunctionName: req.Msg.StarlarkScriptPlanYamlArgs.MainFunctionName,
+			SerializedScript:    req.Msg.StarlarkScriptPlanYamlArgs.SerializedScript,
+			SerializedParams:    req.Msg.StarlarkScriptPlanYamlArgs.SerializedParams,
+			MainFunctionName:    req.Msg.StarlarkScriptPlanYamlArgs.MainFunctionName,
+			AllowPrivilegedMode: req.Msg.StarlarkScriptPlanYamlArgs.AllowPrivilegedMode,
 		},
 	}
 	result, err := (*apiContainerServiceClient).GetStarlarkScriptPlanYaml(ctx, request)
@@ -849,6 +850,7 @@ func (c *WebServer) GetStarlarkPackagePlanYaml(
 			SerializedParams:       req.Msg.StarlarkPackagePlanYamlArgs.SerializedParams,
 			RelativePathToMainFile: req.Msg.StarlarkPackagePlanYamlArgs.RelativePathToMainFile,
 			MainFunctionName:       req.Msg.StarlarkPackagePlanYamlArgs.MainFunctionName,
+			AllowPrivilegedMode:    req.Msg.StarlarkPackagePlanYamlArgs.AllowPrivilegedMode,
 		},
 	}
 	result, err := (*apiContainerServiceClient).GetStarlarkPackagePlanYaml(ctx, request)
